--- a/Resources/style.css
+++ b/Resources/style.css
@@ -1,3 +1,59 @@
+/* Whole Page */
 html {
   font-size: 18px;
+  font-family: Helvetica;
+}
+
+/* Container for content */
+.container {
+  display: flex;
+  max-width: 960px;
+  margin: auto;
+}
+
+/* Header- Title Section */
+.title {
+  background-color: black;
+}
+
+.title .container {
+  display: flex;
+  align-items: center;
+  padding: 12px 0 12px 0.5rem;
+}
+
+.title img {
+  height:1.5rem;
+  padding-right: 15px;
+}
+
+.title span {
+  color: white;
+  padding: 0.66rem 0.5rem 0.66rem 0;
+}
+
+/* Header- Banner Section */
+.banner {
+  height: 25rem;
+  background-image: url(moto.jpeg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.headline {
+  color: white;
+  background-color: black;
+  width: 20rem;
+  padding: 2rem 3rem;
+  margin-top: 9rem;
+}
+
+h1 h2 {
+  font-weight: bold;
+}
+
+.headline h1 {
+  font-size: 2rem;
+  margin: 0.67rem 0;
 }
