--- a/Resources/style.css
+++ b/Resources/style.css
@@ -11,23 +11,27 @@ html {
   margin: auto;
 }
 
+div {
+  display: block;
+}
+
 /* Header- Title Section */
-.title {
+.company {
   background-color: black;
 }
 
-.title .container {
+.company .container {
   display: flex;
   align-items: center;
   padding: 12px 0 12px 0.5rem;
 }
 
-.title img {
+.company img {
   height:1.5rem;
   padding-right: 15px;
 }
 
-.title span {
+.company span {
   color: white;
   padding: 0.66rem 0.5rem 0.66rem 0;
 }
@@ -56,4 +60,83 @@ h1 h2 {
 .headline h1 {
   font-size: 2rem;
   margin: 0.67rem 0;
+}
+
+/* Navigation Panel */
+nav {
+  background-color: firebrick;
+  color: white;
+}
+nav ul {
+  display: flex;
+  padding: 0.75rem 0;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* Main Content Section */
+.gear {
+  display: flex;
+  width: 100%;
+  padding: 3rem 0 0 0;
+  justify-content: space-between;
+}
+
+.products {
+  width: 30%;
+}
+
+.product-image {
+  border: 4px solid black;
+  padding: 2rem 0;
+  height: 9rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.product-image img {
+  max-width: 8rem;
+  width: auto;
+}
+
+.description {
+  display: block;
+  color: white;
+  background-color: black;
+  padding: 0.5rem;
+  text-align: center;
+}
+
+/* Store Info */
+.business-info {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin: 3rem 0 0 0;
+}
+
+.info {
+  width: 35%;
+  display: flex;
+  flex-direction: column;
+}
+
+.title {
+  color: white;
+  background-color: black;
+  padding: 1rem 2rem;
+}
+
+.info span {
+
+}
+
+
+/* Footer */
+footer {
+  background-color: black;
+  color: white;
+  padding: 5rem 0;
+  margin-top: 4rem;
 }
