--- a/Resources/style.css
+++ b/Resources/style.css
@@ -140,3 +140,13 @@ footer {
   padding: 5rem 0;
   margin-top: 4rem;
 }
+
+
+/* Screen size changes */
+
+/* Desktop */
+@media only screen and (min-width: 960px) {
+  .mobile-nav {
+    display: none;
+  }
+}
